# gr-sidekiq

./: .gitignore  CMakeLists.txt  MANIFEST.md  README  README.md  bind.sh  build_install.sh  configure_env.sh
apps/: CMakeLists.txt
cmake/Modules/: FindSidekiq.cmake  gnuradio-sidekiqConfig.cmake  sidekiqConfig.cmake
docs/: CMakeLists.txt  README.sidekiq
docs/doxygen/: CMakeLists.txt  Doxyfile.in
docs/doxygen/doxyxml/: __init__.py  base.py  doxyindex.py  text.py
docs/doxygen/other/: group_defs.dox  main_page.dox
examples/: README  burst_test.grc  bursting.grc  bursting.py  bursting_headless.grc  bursting_headless.py  dual_record.grc  dual_record.py  dual_source.grc  fm_radio.grc  fm_radio.py  fmradio.grc  headless_sink_test.grc  rx_message.grc  single_record.grc  sink_and_telemetry.grc  sink_filter_test.grc  sink_test.grc  sink_test.py  sink_test_headless.grc  sink_test_headless.py  source_and_telemetry.grc  source_test.grc  source_test.py  source_test_debug.grc  source_test_debug_epy_block_0.py  sync_on_1pps.grc  tagged_sink_test.grc  tagged_stream_test.grc.txt  telemetry.grc  timestamp.grc  timestamp.py  timestamp_epy_block_0.py  top_block.py  transceive.grc  transceive.py  transceive2.grc  tx_message.grc  tx_message.py
examples/grc/: sidekiq_source.grc
examples/tag_print/: tag_print.grc  tag_print.py  tag_print_epy_block_0.bk  tag_print_epy_block_0.py
grc/: CMakeLists.txt  sidekiq_sidekiq_rx.block.yml  sidekiq_sidekiq_rx.xml  sidekiq_sidekiq_tx.block.yml  sidekiq_sidekiq_tx.xml  sidekiq_source_s.xml  sidekiq_telemetry.block.yml  sidekiq_tx_burst_test.xml
include/: sidekiq.bk
include/gnuradio/sidekiq/: CMakeLists.txt  api.h  sidekiq_rx.h  sidekiq_tx.h  telemetry.h
include/sidekiq/: CMakeLists.txt  api.h  sidekiq_base.h  sidekiq_defs.h  sidekiq_functions.h  sidekiq_rx.h  sidekiq_source_s.h  sidekiq_tx.h  tx_burst_test.h
lib/: .sidekiq_tx_impl.h.swp  CMakeLists.txt  qa_sidekiq.cc  qa_sidekiq.h  qa_tx_burst_test.cc  qa_tx_burst_test.h  sidekiq.cc  sidekiq.h  sidekiq_base.cc  sidekiq_rx_impl.cc  sidekiq_rx_impl.h  sidekiq_source_s_impl.cc  sidekiq_source_s_impl.h  sidekiq_tx_impl.cc  sidekiq_tx_impl.h  srfs_interface.cc  srfs_interface.h  telemetry_impl.cc  telemetry_impl.h  test_sidekiq.cc  tx_burst_test_impl.cc  tx_burst_test_impl.h
python/: CMakeLists.txt  __init__.py
python/bindings/: CMakeLists.txt  python_bindings.cc  sidekiq_rx_python.cc  sidekiq_tx_python.cc
python/bindings/docstrings/: sidekiq_rx_pydoc_template.h  sidekiq_tx_pydoc_template.h
python/sidekiq/: CMakeLists.txt  __init__.py  qa_telemetry.py
python/sidekiq/bindings/: CMakeLists.txt  python_bindings.cc  sidekiq_rx_python.cc  sidekiq_tx_python.cc  telemetry_python.cc
python/sidekiq/bindings/docstrings/: sidekiq_rx_pydoc_template.h  sidekiq_tx_pydoc_template.h  telemetry_pydoc_template.h
swig/: CMakeLists.txt  sidekiq_swig.i
